Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-89012

Changing sourceItem size dynamically does not function as expected

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 6.0.1, 6.1.0, 6.1
    • 6.0.0
    • Quick: 3D
    • None
    • 3
    • c9c1669d0d8af3cbf15f954fca59f47537284292 (qt/qtquick3d/dev) 08eff80a2e111596ceef0fb8d68250f845290a22 (qt/qtquick3d/6.0)
    • Qt Quick 3D - 49/50

    Description

      As described in https://codereview.qt-project.org/c/qt/qtquick3d/+/324316

      A somewhat special case, but is actively excercised by at least one external demo (DynamicMetersDemo)

      The dev branch needs a similar solution, with some tests for this case. Right now nothing exercises changing the sourceItem's width or height dynamically, apart from that one external demo in quick3d-demos but that's not compatible with Qt 6 - ideally introduce some autotest.

      It could also be interesting to check what happens in the other two cases: when the sourceItem is an Image and when the sourceItem is an Item tree with layers.enabled: true. Does it render as expected then, after changing the item's size.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lagocs Laszlo Agocs
            lagocs Laszlo Agocs
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes