Follow sourceItem size changes

Pick-to: 6.0
Fixes: QTBUG-89012
Change-Id: Ie70177cc7c00498cf67bffce13ec36e094c76316
Reviewed-by: Andy Nichols <andy.nichols@qt.io>