src/quick3d/qquick3dtexture.cpp
@@ -556,6 +556,7 @@ void QQuick3DTexture::setSourceItem(QQuickItem *sourceItem)
         // cannot touch m_layer here
     }
     m_initializedSourceItem = nullptr;
+    m_initializedSourceItemSize = QSize();
 
     m_dirtyFlags.setFlag(DirtyFlag::SourceDirty);
     m_dirtyFlags.setFlag(DirtyFlag::SourceItemDirty);
@@ -910,7 +911,7 @@ QSSGRenderGraphObject *QQuick3DTexture::updateSpatialNode(QSSGRenderGraphObject 
             } else {
                 // Not a texture provider, so not an Image or an Item with
                 // layer.enabled: true, create our own QSGLayer.
-                if (m_initializedSourceItem != m_sourceItem) {
+                if (m_initializedSourceItem != m_sourceItem || m_initializedSourceItemSize != m_sourceItem->size()) {
                     // If there was a previous sourceItem and m_layer is valid
                     // then set its content to null until we get to
                     // afterSynchronizing, otherwise things can blow up.
@@ -918,6 +919,7 @@ QSSGRenderGraphObject *QQuick3DTexture::updateSpatialNode(QSSGRenderGraphObject 
                         m_layer->setItem(nullptr);
 
                     m_initializedSourceItem = m_sourceItem;
+                    m_initializedSourceItemSize = m_sourceItem->size();
 
                     // The earliest next point where we can do anything is
                     // after the scenegraph's QQuickItem sync round has completed.
@@ -1090,6 +1092,7 @@ void QQuick3DTexture::itemGeometryChanged(QQuickItem *item, QQuickGeometryChange
         auto renderImage = getRenderImage();
         if (renderImage)
             renderImage->m_flags.setFlag(QSSGRenderImage::Flag::ItemSizeDirty);
+        m_dirtyFlags.setFlag(DirtyFlag::SourceItemDirty);
         update();
     }
 }
